third change to test codepipeline

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Did this work?</h1>
-    <h2>Monoral. 
-	    You’re one step closer to practicing continuous deployment!</h2>
+    <h1>Boop</h1>
+    <h2>Get going.</h2>
   </div>
 </body>
 </html>
